samples/_failures_safe/1761551304_80c6d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdf2d719.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_fdf2d719.c:159:24: error: missing terminating " character
  159 |                 printf("
      |                        ^
./samples/SAFE/__tmp_fdf2d719.c:159:17: error: expected expression at end of input
  159 |                 printf("
      |                 ^~~~~~
./samples/SAFE/__tmp_fdf2d719.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdf2d719.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdf2d719.c:159:17: error: expected declaration or statement at end of input
